--- a/css/styles.css
+++ b/css/styles.css
@@ -82,3 +82,135 @@ header .header_image_logo img {
     margin-left: 1rem;
     background-image: url('../assets/icons/down-arrow.svg');
 }
+
+
+main{
+    width: 100%;
+    height: auto;
+    background-color: var(--off-white);
+}
+.main_exchange_container{
+    width: 100%;
+    height: auto;
+    padding: 8rem 0 3rem 0;
+    text-align: center;
+}
+.main_exchange_container .main_image_bitcoin{
+    width: 20rem;
+    height: 20rem;
+    margin: 0 auto;
+    margin-bottom: 5rem;
+    background-image: url('../assets/img/Bitcoin.svg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.main_exchange_container .main_information_container{
+    width: 90%;
+    min-width: 28.8rem;
+    max-width: 90rem;
+    margin: 0 auto;
+}
+.main_exchange_container .main_information_container h2{
+    margin-bottom: 3rem;
+    font-size: 2.4rem;
+    font-weight: bold;
+    line-height: 2,6rem;
+    color: var(--black);
+}
+.main_exchange_container .main_information_container p{
+    margin-bottom: 3rem;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.6rem;
+    color: #757575;
+}
+.main_currency_table{
+    width: 70%;
+    min-width: 23.5rem;
+    max-width: 50rem;
+    height: 36rem;
+    margin: 0 auto;
+    font-family: "Inter",sans-serif;
+}
+
+.main_currency_table .currency_table_tittle{
+    margin-bottom: 1.5rem;
+    font-size: 1.8rem;
+    font-weight: bold;
+    line-height: 2.3rem;
+    color: var(--bitcoin-orange);
+    /* text-align: start; */
+}
+.main_currency_table .currency_table_container{
+    width: 90%;
+    min-width: 23rem;
+    max-width: 30rem;
+    height: 25rem;
+    margin: 0 auto;
+}
+.currency_table_container table{
+    width: 100%;
+    height: 100%;
+}
+.currency_table_container td{
+    width: 50%;
+    font-size: 1.6rem;
+    font-weight: 500;
+    line-height: 1.9rem;
+    color: var(--grey);
+    background-color: var(--just-white);
+}
+.currency_table_container .table_top_left{
+    border-radius: 1.5rem 0 0;
+}
+.currency_table_container .table_top_right{
+    border-radius: 0 1.5rem 0;
+}
+.currency_table_container .table_button_right{
+    border-radius: 0 0 1.5rem 0;
+}
+.currency_table_container .table_button_left{
+    border-radius: 0 0 0 1.5rem;
+}
+.currency_table_container .table_right{
+    font-size: 1.4rem;
+    font-weight: normal;
+    line-height: 1.7rem;
+    color: #757575;
+}
+.currency_table_container .table_right .trend_down{
+    display: inline-block;
+    width: 1.5rem;
+    height: 1.5rem;
+    margin-left: 1rem;
+    background-image: url('../assets/icons/trending-down.svg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.currency_table_container .table_right .trend_up{
+    display: inline-block;
+    width: 1.5rem;
+    height: 1.5rem;
+    margin-left: 1rem;
+    background-image: url('../assets/icons/trending-up.svg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.currency_table_date{
+    width: 19rem;
+    height: 3rem;
+    margin: 1.5rem auto 0;
+    padding: .8rem;
+    background-color: var(--soft-orange);
+    border-radius: .8rem;
+   
+}
+.currency_table_date p{
+    font-size: 1.2rem;
+    line-height: 1.5rem;
+    font-weight: 300;
+    color: var(--warm-black);
+}
