--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 :root{
     --bitcoin-orange: #F7931A;
     --soft-orange: #ffe9d5;
-    -secondary-blue: #1a9af7;
+    --secondary-blue: #1a9af7;
     --soft-blue: #e7f5ff;
     --warm-black: #201e1c;
     --black: #282623;
@@ -213,4 +213,87 @@ main{
     line-height: 1.5rem;
     font-weight: 300;
     color: var(--warm-black);
+}
+.main_product_detail{
+    position: relative;
+    width: 100%;
+    min-width: 32rem;
+    height: auto;
+    padding: 2rem 1rem;
+    background: var(--warm-black);
+}
+.main_product_detail .produc_detail_batata_logo{
+    position: absolute;
+    width: 4rem;
+    height: 2.5rem;
+    top: -1rem;
+    left: calc(50% - 20px);
+    background-image: url('../assets/icons/batata.svg');;
+}
+.main_product_detail .product_detail_tittle{
+    width: 90%;
+    min-width: 28.8rem;
+    height: auto;
+    margin: 5rem auto 0;
+    text-align: center;
+}
+.main_product_detail .product_detail_tittle h2{
+    margin-bottom: 2rem;
+    font-size: 2.4rem;
+    font-weight: bold;
+    line-height: 2.6rem;
+    color: var(--just-white);
+}
+.main_product_detail .product_detail_tittle p{
+    margin-bottom: 2rem;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: #808080;
+}
+.product_detail_cards_container .product_detail_card{
+    width: 90%;
+    min-width: 28.8rem;
+    max-width: 40rem;
+    min-height: 15rem;
+    margin: 1.5rem auto;
+    padding: 1.5rem;
+    background-color: var(--black);
+    border-radius: .5rem;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.16);
+}
+.product_detail_card_icon{
+    display: inline-block;
+    width: 2rem;
+    height: 2rem;
+    margin-bottom: 1rem;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
+}
+.clock{
+    background-image: url('../assets/icons/clock.svg');
+}   
+.eye{
+    background-image: url('../assets/icons/eye.svg');
+}
+.dollar_sign{
+    background-image: url('../assets/icons/dollar-sign.svg');
+}
+.check{
+    background-image: url('../assets/icons/check-circle.svg');
+}
+.product_detail_card .product_detail_card_tittle{
+   margin-bottom: 1.5rem;
+   font-size: 1.8rem;
+   font-weight: bold;
+   line-height: 1.8rem;
+   color: var(--just-white);
+}
+.product_detail_card .product_detail_card_body{
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: #808080;
 }
